--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "generate:protos:frontend": "protoc --plugin=protoc-gen-es=./node_modules/.bin/protoc-gen-es --es_out=src/generated --es_opt=target=ts geospatial.proto",
     "generate:protos:backend": "python -m grpc_tools.protoc --python_out=backend/generated --grpc_python_out=backend/generated --proto_path=. geospatial.proto"
   },
-  "author": "ROG <luan.roger.2003@gmail.com>",
-  "license": "MIT",
+  "author": "Hans Villarroel <hans.villarroel@usach.cl>",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@bufbuild/buf": "^1.55.1",
     "@bufbuild/protoc-gen-es": "^2.6.1",
