--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "echarts-gl": "^2.0.9",
     "electron-squirrel-startup": "^1.0.1",
     "i18next": "^25.0.1",
