--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ protobuf>=6.30.0
 numpy>=1.24.0
 pandas>=1.5.0
 sqlmodel>=0.0.21
-duckdb>=1.3.2
+# Update to 1.4.1 when its available
+duckdb[all]==1.3.2
 duckdb-engine>=0.17.0
 
