WIP: github/gitlab actions for building for each OS

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "dev": "source venv/bin/activate && npm run generate:full-stack && npm start",
     "package": "electron-forge package",
     "make": "electron-forge make",
+    "make:all": "electron-forge make --platform=darwin,win32,linux --arch=x64,arm64",
+    "make:win": "electron-forge make --platform=win32",
+    "make:mac": "npm run make:mac:x64 && npm run make:mac:arm64",
+    "make:mac:x64": "electron-forge make --platform=darwin --arch=x64",
+    "make:mac:arm64": "electron-forge make --platform=darwin --arch=arm64",
+    "make:linux": "electron-forge make --platform=linux",
     "premake": "npm run generate:protos",
     "publish": "electron-forge publish",
     "lint": "eslint .",
