--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "electron-forge start",
     "prestart": "npm run generate:protos",
-    "dev": "source venv/bin/activate && npm run generate:full-stack && npm start",
+    "dev": "npm run generate:full-stack && npm start",
+    "dev:local": "source venv/bin/activate && npm run generate:full-stack && npm start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "make:all": "electron-forge make --platform=darwin,win32,linux --arch=x64,arm64",
@@ -27,13 +28,15 @@
     "test:unit": "vitest",
     "test:e2e": "playwright test",
     "test:all": "vitest run && playwright test",
-    "build:backend": "source venv/bin/activate && cd backend && python build_server.py",
+    "build:backend": "cd backend && python build_server.py",
+    "build:backend:local": "source venv/bin/activate && cd backend && python build_server.py",
     "build:full": "npm run build:backend && npm run make",
     "dev:backend": "source venv/bin/activate && cd backend && python grpc_server.py",
-    "setup:backend": "source venv/bin/activate && cd backend && pip install -r requirements.txt",
-    "generate:protos": "source venv/bin/activate && node scripts/generate-protos.js",
-    "generate:simple": "source venv/bin/activate && node scripts/generate-full-stack.js",
-    "generate:full-stack": "source venv/bin/activate && node scripts/generate-full-stack-optimized.js",
+    "setup:backend": "cd backend && pip install -r requirements.txt",
+    "setup:backend:local": "source venv/bin/activate && cd backend && pip install -r requirements.txt",
+    "generate:protos": "node scripts/generate-protos.js",
+    "generate:simple": "node scripts/generate-full-stack.js",
+    "generate:full-stack": "node scripts/generate-full-stack-optimized.js",
     "test:simplified": "node scripts/test-simplified-system.js"
   },
   "author": "Hans Villarroel <hans.villarroel@usach.cl>",
