--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@bufbuild/buf": "^1.55.1",
+    "@bufbuild/protoc": "^28.3.0",
     "@bufbuild/protoc-gen-es": "^2.6.1",
     "@electron-forge/cli": "^7.8.1",
     "@electron-forge/maker-deb": "^7.8.0",
