--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,78 +164,78 @@ build:linux:
 # TEST STAGE
 # ====================
 
-test:unit:
-  stage: test
-  image: node:${NODE_VERSION}
-  dependencies:
-    - setup:dependencies
-  before_script:
-    - apt-get update && apt-get install -y python3 python3-venv
-    - source venv/bin/activate
-  script:
-    - npm run test:unit
-  coverage: '/All files[^|]*\|[^|]*\s+([\d\.]+)/'
-  artifacts:
-    reports:
-      coverage_report:
-        coverage_format: cobertura
-        path: coverage/cobertura-coverage.xml
-    paths:
-      - coverage/
-    expire_in: 1 week
+# test:unit:
+#   stage: test
+#   image: node:${NODE_VERSION}
+#   dependencies:
+#     - setup:dependencies
+#   before_script:
+#     - apt-get update && apt-get install -y python3 python3-venv
+#     - source venv/bin/activate
+#   script:
+#     - npm run test:unit
+#   coverage: '/All files[^|]*\|[^|]*\s+([\d\.]+)/'
+#   artifacts:
+#     reports:
+#       coverage_report:
+#         coverage_format: cobertura
+#         path: coverage/cobertura-coverage.xml
+#     paths:
+#       - coverage/
+#     expire_in: 1 week
 
-test:lint:
-  stage: test
-  image: node:${NODE_VERSION}
-  dependencies:
-    - setup:dependencies
-  script:
-    - npm run lint
-    - npm run format
+# test:lint:
+#   stage: test
+#   image: node:${NODE_VERSION}
+#   dependencies:
+#     - setup:dependencies
+#   script:
+#     - npm run lint
+#     - npm run format
 
 # E2E tests (only on Linux for speed)
-test:e2e:
-  stage: test
-  image: mcr.microsoft.com/playwright:v1.52.0-jammy
-  dependencies:
-    - setup:dependencies
-    - build:linux
-  before_script:
-    - apt-get update && apt-get install -y python3 python3-venv
-    - source venv/bin/activate
-    - npx playwright install --with-deps
-  script:
-    - npm run test:e2e
-  artifacts:
-    when: on_failure
-    paths:
-      - playwright-report/
-      - test-results/
-    expire_in: 1 week
-  allow_failure: true
+# test:e2e:
+#   stage: test
+#   image: mcr.microsoft.com/playwright:v1.52.0-jammy
+#   dependencies:
+#     - setup:dependencies
+#     - build:linux
+#   before_script:
+#     - apt-get update && apt-get install -y python3 python3-venv
+#     - source venv/bin/activate
+#     - npx playwright install --with-deps
+#   script:
+#     - npm run test:e2e
+#   artifacts:
+#     when: on_failure
+#     paths:
+#       - playwright-report/
+#       - test-results/
+#     expire_in: 1 week
+#   allow_failure: true
 
 # ====================
 # PACKAGE STAGE (Release)
 # ====================
 
-package:release:
-  stage: package
-  image: alpine:latest
-  dependencies:
-    - build:macos:x64
-    - build:macos:arm64
-    - build:windows
-    - build:linux
-  script:
-    - echo "Packaging release artifacts..."
-    - ls -lah out/make/
-  artifacts:
-    name: "geoapp-all-platforms-${CI_COMMIT_TAG:-${CI_COMMIT_SHORT_SHA}}"
-    paths:
-      - out/make/
-    expire_in: 1 month
-  only:
-    - tags
+# package:release:
+#   stage: package
+#   image: alpine:latest
+#   dependencies:
+#     - build:macos:x64
+#     - build:macos:arm64
+#     - build:windows
+#     - build:linux
+#   script:
+#     - echo "Packaging release artifacts..."
+#     - ls -lah out/make/
+#   artifacts:
+#     name: "geoapp-all-platforms-${CI_COMMIT_TAG:-${CI_COMMIT_SHORT_SHA}}"
+#     paths:
+#       - out/make/
+#     expire_in: 1 month
+#   only:
+#     - tags
 
 # ====================
 # OPTIONAL: Deploy/Release Stage
