--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@grpc/proto-loader": "^0.7.15",
     "@icons-pack/react-simple-icons": "^12.7.0",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.15",
@@ -126,7 +127,6 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-proto": "^2.7.7",
-    "uplot": "^1.6.32",
     "zod": "^3.24.3",
     "zustand": "^5.0.8"
   }
