--- a/package.json
+++ b/package.json
@@ -120,8 +120,11 @@
     "i18next": "^25.0.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.1",
+    "react-mosaic-component": "^6.1.1",
     "react-rnd": "^10.5.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
