--- a/package.json
+++ b/package.json
@@ -111,6 +111,8 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.77.1",
     "@tanstack/react-router": "^1.120.20",
+    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.12",
     "@tanstack/router-devtools": "^1.117.1",
     "@vitejs/plugin-react": "^4.6.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
